--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -24,11 +24,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Download text file from build Job
+      - name: Download text file
         uses: actions/download-artifact@v4
         with:
           name: hello-artifact
           path: ./artifacts
 
-      - name: Display txt file
+      - name: Display content of the text file
         run: cat ./artifacts/hello.txt
